# CMakeList.txt : CMake project for Files-counter, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Files-counter")

# Add source to this project's executable.
add_executable (Files-counter "Files-counter.cpp" "Files-counter.h")

# TODO: Add tests and install targets if needed.
